fsarchiver: Filesystem Archiver for Linux [http://www.fsarchiver.org]
=====================================================================
* 0.6.9:
  - Fix in probe: show devmapper/lvm volumes even when /dev/dm-xx does not exist
  - Fix error handling in restoration: consider ENOSPC as a fatal error and other fixes
* 0.6.8 (2010-02-20):
  - Fixed compilation error on systems with recent kernel headers by including <sys/stat.h>
  - Fixed critial bug: there was a risk of corruption when the archive was written on a smbfs/cifs filesystem
* 0.6.7 (2010-01-31):
  - Added support for sparse files (sparse file on the original disk will be recreated as sparse file)
  - Added per-archive minimum fsarchiver version requirement (MAINHEADKEY_MINFSAVERSION)
  - Added dirsinfo in archives with simple files and directories to store stats required for progression
  - The logfile created when option -d is used now has a specific name so that it's not overwritten
  - The md5 checksums are now calculated using the implementation from libgcrypt instead of the internal one
  - The libgcrypt library is now a mandatory dependency and crypto cannot be disabled any more
  - Allow non root users to use "fsarchiver archinfo" as long as they have read permissions on the archive
* 0.6.6 (2010-01-24):
  - Fix: don't remove the archive file when savefs/savedir fails because the archive already exists
  - Partitions already mounted are remounted with MS_BIND to have access to files hidden by mounted filesystems 
  - Analyse filesystems only when they are all accessible to prevent having to wait and then get an error
  - Moved management of data files (open/write/md5sum) from extract.c to a separate object (datafile.c)
  - Important internal changes, renaming of functions/files, and simplifications for better consistency
  - Rephrased and simplified messages and other improvements in fsarchiver.c (contribution from dgerman)